part1/exercise-109/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: log-output-ingress
  namespace: log-output
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: log-output-service
                port:
                  number: 80
            path: /
            pathType: Prefix

          - backend:
              service:
                name: ping-pong-service
                port:
                  number: 80
            path: /pingpong
            pathType: Prefix
status:
  loadBalancer: {}
